--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="close-popup js-close-campaign"></div>
 		</div>
 </div>
-<header id="main_page">
+<header id="main_page" class="header">
 	<div class="header_top">
 		<div class="container">
 			<div class="row">
@@ -147,10 +147,10 @@
 		<div class="row">
 			<div class="col-12">
 				<p class="about_text">
-					Мы являемся многоопытной организацией в области адво-<br>
-					катуры.У нас собрана большая команда профессионалов.<br>
-					Готовы выслушать,проконсультировать и довести<br>
-					всю ситуацию до успеха.
+					Мы являемся многоопытной организацией в области<br>
+					адвокатуры. У нас собрана большая команда<br>
+					профессионалов. Готовы выслушать,проконсультировать<br>
+					и довести всю ситуацию до успеха.
 				</p>
 			</div>
 		</div>
@@ -214,7 +214,7 @@
 			<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 				<div class="advantages_item">
 					<div class="advantages_item__image">
-						<img src="img/adv_1.svg" alt="" width="55" height="55">
+						<img src="img/a_1.svg" alt="" width="55" height="55">
 					</div>
 					<p class="advantages_item__text">
 						Наилучшие условия<br>
@@ -225,7 +225,7 @@
 			<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 				<div class="advantages_item">
 					<div class="advantages_item__image">
-						<img src="img/adv_2.svg" alt="" width="55" height="55">
+						<img src="img/a_2.svg" alt="" width="55" height="55">
 					</div>
 					<p class="advantages_item__text">
 						Индивидуальный подход<br>
@@ -236,7 +236,7 @@
 			<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 				<div class="advantages_item">
 					<div class="advantages_item__image">
-						<img src="img/adv_3.svg" alt="" width="55" height="55">
+						<img src="img/a_3.svg" alt="" width="55" height="55">
 					</div>
 					<p class="advantages_item__text">
 						Работаем 24/7<br>
@@ -247,7 +247,7 @@
 			<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
 				<div class="advantages_item">
 					<div class="advantages_item__image">
-						<img src="img/adv_4.svg" alt="" width="55" height="55">
+						<img src="img/a_4.svg" alt="" width="55" height="55">
 					</div>
 					<p class="advantages_item__text">
 						Первая консультация<br>
